feat: appId to productName and ps impl (#46)
